@@ -310,6 +310,20 @@ name|hadoop
 operator|.
 name|util
 operator|.
+name|JvmPauseMonitor
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|util
+operator|.
 name|NodeHealthScriptRunner
 import|;
 end_import
@@ -894,6 +908,11 @@ name|NodeManagerMetrics
 operator|.
 name|create
 argument_list|()
+decl_stmt|;
+DECL|field|pauseMonitor
+specifier|private
+name|JvmPauseMonitor
+name|pauseMonitor
 decl_stmt|;
 DECL|field|aclsManager
 specifier|private
@@ -1987,6 +2006,24 @@ argument_list|(
 name|dispatcher
 argument_list|)
 expr_stmt|;
+name|pauseMonitor
+operator|=
+operator|new
+name|JvmPauseMonitor
+argument_list|(
+name|conf
+argument_list|)
+expr_stmt|;
+name|metrics
+operator|.
+name|getJvmMetrics
+argument_list|()
+operator|.
+name|setPauseMonitor
+argument_list|(
+name|pauseMonitor
+argument_list|)
+expr_stmt|;
 name|DefaultMetricsSystem
 operator|.
 name|initialize
@@ -2042,6 +2079,11 @@ name|e
 argument_list|)
 throw|;
 block|}
+name|pauseMonitor
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
 name|super
 operator|.
 name|serviceStart
@@ -2082,6 +2124,19 @@ operator|.
 name|shutdown
 argument_list|()
 expr_stmt|;
+if|if
+condition|(
+name|pauseMonitor
+operator|!=
+literal|null
+condition|)
+block|{
+name|pauseMonitor
+operator|.
+name|stop
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 finally|finally
 block|{
