@@ -340,6 +340,20 @@ name|hadoop
 operator|.
 name|util
 operator|.
+name|JvmPauseMonitor
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|util
+operator|.
 name|ReflectionUtils
 import|;
 end_import
@@ -1658,6 +1672,11 @@ DECL|field|resourceTracker
 specifier|protected
 name|ResourceTrackerService
 name|resourceTracker
+decl_stmt|;
+DECL|field|pauseMonitor
+specifier|private
+name|JvmPauseMonitor
+name|pauseMonitor
 decl_stmt|;
 annotation|@
 name|VisibleForTesting
@@ -3190,12 +3209,30 @@ literal|"ResourceManager"
 argument_list|)
 expr_stmt|;
 name|JvmMetrics
+name|jm
+init|=
+name|JvmMetrics
 operator|.
 name|initSingleton
 argument_list|(
 literal|"ResourceManager"
 argument_list|,
 literal|null
+argument_list|)
+decl_stmt|;
+name|pauseMonitor
+operator|=
+operator|new
+name|JvmPauseMonitor
+argument_list|(
+name|conf
+argument_list|)
+expr_stmt|;
+name|jm
+operator|.
+name|setPauseMonitor
+argument_list|(
+name|pauseMonitor
 argument_list|)
 expr_stmt|;
 comment|// Initialize the Reservation system
@@ -3410,6 +3447,11 @@ operator|.
 name|start
 argument_list|()
 expr_stmt|;
+name|pauseMonitor
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
 if|if
 condition|(
 name|recoveryEnabled
@@ -3512,6 +3554,19 @@ operator|.
 name|shutdown
 argument_list|()
 expr_stmt|;
+if|if
+condition|(
+name|pauseMonitor
+operator|!=
+literal|null
+condition|)
+block|{
+name|pauseMonitor
+operator|.
+name|stop
+argument_list|()
+expr_stmt|;
+block|}
 if|if
 condition|(
 name|rmContext
